src/main/java/gov/nist/csd/pm/policy/pml/antlr/PMLParser.java
// Generated from PMLParser.g4 by ANTLR 4.8
package gov.nist.csd.pm.policy.pml.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, DELETE=2, POLICY_ELEMENT=3, CONTAINED=4, RULE=5, WHEN=6, PERFORMS=7, 
		AS=8, ON=9, IN=10, DO=11, ANY_USER=12, PROCESSES=13, PROCESS=14, INTERSECTION=15, 
		UNION=16, ANY=17, SET_RESOURCE_ACCESS_RIGHTS=18, ASSIGN=19, ASSIGN_TO=20, 
		DEASSIGN=21, FROM=22, SET_PROPERTIES=23, WITH_PROPERTIES=24, OF=25, TO=26, 
		ASSOCIATE=27, AND=28, WITH=29, DISSOCIATE=30, DENY=31, PROHIBITION=32, 
		OBLIGATION=33, ACCESS_RIGHTS=34, POLICY_CLASS=35, OBJECT_ATTRIBUTE=36, 
		USER_ATTRIBUTE=37, USER_ATTRIBUTES=38, OBJECT_ATTRIBUTES=39, OBJECT=40, 
		USER=41, USERS=42, ATTRIBUTE=43, ASSOCIATIONS=44, BREAK=45, DEFAULT=46, 
		FUNCTION=47, INTERFACE=48, MAP=49, ELSE=50, CONST=51, IF=52, RANGE=53, 
		CONTINUE=54, FOREACH=55, RETURN=56, VAR=57, STRING_TYPE=58, BOOL_TYPE=59, 
		VOID_TYPE=60, ARRAY_TYPE=61, NIL_LIT=62, TRUE=63, FALSE=64, ID=65, OPEN_PAREN=66, 
		CLOSE_PAREN=67, OPEN_CURLY=68, CLOSE_CURLY=69, OPEN_BRACKET=70, CLOSE_BRACKET=71, 
		ASSIGN_EQUALS=72, COMMA=73, SEMI=74, COLON=75, DOT=76, DECLARE_ASSIGN=77, 
		LOGICAL_OR=78, LOGICAL_AND=79, EQUALS=80, NOT_EQUALS=81, EXCLAMATION=82, 
		PLUS=83, DOUBLE_QUOTE_STRING=84, WS=85, COMMENT=86, LINE_COMMENT=87;
	public static final int
		RULE_pml = 0, RULE_statement = 1, RULE_statementBlock = 2, RULE_createPolicyStatement = 3, 
		RULE_hierarchy = 4, RULE_userAttrsHierarchy = 5, RULE_objectAttrsHierarchy = 6, 
		RULE_associationsHierarchy = 7, RULE_hierarchyBlock = 8, RULE_associationsHierarchyBlock = 9, 
		RULE_hierarchyStatement = 10, RULE_associationsHierarchyStatement = 11, 
		RULE_createNonPCStatement = 12, RULE_nonPCNodeType = 13, RULE_createObligationStatement = 14, 
		RULE_createRuleStatement = 15, RULE_subjectClause = 16, RULE_onClause = 17, 
		RULE_response = 18, RULE_responseBlock = 19, RULE_responseStatement = 20, 
		RULE_createProhibitionStatement = 21, RULE_setNodePropertiesStatement = 22, 
		RULE_assignStatement = 23, RULE_deassignStatement = 24, RULE_associateStatement = 25, 
		RULE_dissociateStatement = 26, RULE_setResourceAccessRightsStatement = 27, 
		RULE_deleteStatement = 28, RULE_deleteType = 29, RULE_nodeType = 30, RULE_deleteRuleStatement = 31, 
		RULE_variableDeclarationStatement = 32, RULE_constSpec = 33, RULE_varSpec = 34, 
		RULE_variableAssignmentStatement = 35, RULE_functionDefinitionStatement = 36, 
		RULE_functionSignature = 37, RULE_formalArgList = 38, RULE_formalArg = 39, 
		RULE_returnStatement = 40, RULE_functionInvokeStatement = 41, RULE_foreachStatement = 42, 
		RULE_breakStatement = 43, RULE_continueStatement = 44, RULE_ifStatement = 45, 
		RULE_elseIfStatement = 46, RULE_elseStatement = 47, RULE_variableType = 48, 
		RULE_mapType = 49, RULE_arrayType = 50, RULE_expression = 51, RULE_expressionList = 52, 
		RULE_literal = 53, RULE_stringLit = 54, RULE_boolLit = 55, RULE_arrayLit = 56, 
		RULE_mapLit = 57, RULE_element = 58, RULE_variableReference = 59, RULE_index = 60, 
		RULE_id = 61, RULE_functionInvoke = 62, RULE_functionInvokeArgs = 63;
	private static String[] makeRuleNames() {
		return new String[] {
			"pml", "statement", "statementBlock", "createPolicyStatement", "hierarchy", 
			"userAttrsHierarchy", "objectAttrsHierarchy", "associationsHierarchy", 
			"hierarchyBlock", "associationsHierarchyBlock", "hierarchyStatement", 
			"associationsHierarchyStatement", "createNonPCStatement", "nonPCNodeType", 
			"createObligationStatement", "createRuleStatement", "subjectClause", 
			"onClause", "response", "responseBlock", "responseStatement", "createProhibitionStatement", 
			"setNodePropertiesStatement", "assignStatement", "deassignStatement", 
			"associateStatement", "dissociateStatement", "setResourceAccessRightsStatement", 
			"deleteStatement", "deleteType", "nodeType", "deleteRuleStatement", "variableDeclarationStatement", 
			"constSpec", "varSpec", "variableAssignmentStatement", "functionDefinitionStatement", 
			"functionSignature", "formalArgList", "formalArg", "returnStatement", 
			"functionInvokeStatement", "foreachStatement", "breakStatement", "continueStatement", 
			"ifStatement", "elseIfStatement", "elseStatement", "variableType", "mapType", 
			"arrayType", "expression", "expressionList", "literal", "stringLit", 
			"boolLit", "arrayLit", "mapLit", "element", "variableReference", "index", 
			"id", "functionInvoke", "functionInvokeArgs"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'create'", "'delete'", null, "'contained'", "'rule'", "'when'", 
			"'performs'", "'as'", "'on'", "'in'", "'do'", "'any user'", "'processes'", 
			"'process'", null, "'union'", "'any'", "'set resource access rights'", 
			"'assign'", "'assign to'", "'deassign'", "'from'", "'set properties'", 
			"'with properties'", "'of'", "'to'", "'associate'", "'and'", "'with'", 
			"'dissociate'", "'deny'", "'prohibition'", "'obligation'", "'access rights'", 
			null, null, null, null, null, null, null, null, "'attribute'", "'associations'", 
			"'break'", "'default'", "'function'", "'interface'", "'map'", "'else'", 
			"'const'", "'if'", "'range'", "'continue'", "'foreach'", "'return'", 
			"'var'", "'string'", "'bool'", "'void'", "'array'", "'nil'", "'true'", 
			"'false'", null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "','", 
			"';'", "':'", "'.'", "':='", "'||'", "'&&'", "'=='", "'!='", "'!'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "DELETE", "POLICY_ELEMENT", "CONTAINED", "RULE", "WHEN", 
			"PERFORMS", "AS", "ON", "IN", "DO", "ANY_USER", "PROCESSES", "PROCESS", 
			"INTERSECTION", "UNION", "ANY", "SET_RESOURCE_ACCESS_RIGHTS", "ASSIGN", 
			"ASSIGN_TO", "DEASSIGN", "FROM", "SET_PROPERTIES", "WITH_PROPERTIES", 
			"OF", "TO", "ASSOCIATE", "AND", "WITH", "DISSOCIATE", "DENY", "PROHIBITION", 
			"OBLIGATION", "ACCESS_RIGHTS", "POLICY_CLASS", "OBJECT_ATTRIBUTE", "USER_ATTRIBUTE", 
			"USER_ATTRIBUTES", "OBJECT_ATTRIBUTES", "OBJECT", "USER", "USERS", "ATTRIBUTE", 
			"ASSOCIATIONS", "BREAK", "DEFAULT", "FUNCTION", "INTERFACE", "MAP", "ELSE", 
			"CONST", "IF", "RANGE", "CONTINUE", "FOREACH", "RETURN", "VAR", "STRING_TYPE", 
			"BOOL_TYPE", "VOID_TYPE", "ARRAY_TYPE", "NIL_LIT", "TRUE", "FALSE", "ID", 
			"OPEN_PAREN", "CLOSE_PAREN", "OPEN_CURLY", "CLOSE_CURLY", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "ASSIGN_EQUALS", "COMMA", "SEMI", "COLON", "DOT", "DECLARE_ASSIGN", 
			"LOGICAL_OR", "LOGICAL_AND", "EQUALS", "NOT_EQUALS", "EXCLAMATION", "PLUS", 
			"DOUBLE_QUOTE_STRING", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PmlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PMLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public PmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterPml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitPml(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitPml(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PmlContext pml() throws RecognitionException {
		PmlContext _localctx = new PmlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << DELETE) | (1L << SET_RESOURCE_ACCESS_RIGHTS) | (1L << ASSIGN) | (1L << DEASSIGN) | (1L << SET_PROPERTIES) | (1L << ASSOCIATE) | (1L << DISSOCIATE) | (1L << BREAK) | (1L << FUNCTION) | (1L << CONST) | (1L << IF) | (1L << CONTINUE) | (1L << FOREACH) | (1L << RETURN) | (1L << VAR))) != 0) || _la==ID) {
				{
				{
				setState(128);
				statement();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public CreatePolicyStatementContext createPolicyStatement() {
			return getRuleContext(CreatePolicyStatementContext.class,0);
		}
		public CreateNonPCStatementContext createNonPCStatement() {
			return getRuleContext(CreateNonPCStatementContext.class,0);
		}
		public CreateObligationStatementContext createObligationStatement() {
			return getRuleContext(CreateObligationStatementContext.class,0);
		}
		public CreateProhibitionStatementContext createProhibitionStatement() {
			return getRuleContext(CreateProhibitionStatementContext.class,0);
		}
		public SetNodePropertiesStatementContext setNodePropertiesStatement() {
			return getRuleContext(SetNodePropertiesStatementContext.class,0);
		}
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public DeassignStatementContext deassignStatement() {
			return getRuleContext(DeassignStatementContext.class,0);
		}
		public AssociateStatementContext associateStatement() {
			return getRuleContext(AssociateStatementContext.class,0);
		}
		public DissociateStatementContext dissociateStatement() {
			return getRuleContext(DissociateStatementContext.class,0);
		}
		public SetResourceAccessRightsStatementContext setResourceAccessRightsStatement() {
			return getRuleContext(SetResourceAccessRightsStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public DeleteRuleStatementContext deleteRuleStatement() {
			return getRuleContext(DeleteRuleStatementContext.class,0);
		}
		public VariableAssignmentStatementContext variableAssignmentStatement() {
			return getRuleContext(VariableAssignmentStatementContext.class,0);
		}
		public VariableDeclarationStatementContext variableDeclarationStatement() {
			return getRuleContext(VariableDeclarationStatementContext.class,0);
		}
		public FunctionDefinitionStatementContext functionDefinitionStatement() {
			return getRuleContext(FunctionDefinitionStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public ForeachStatementContext foreachStatement() {
			return getRuleContext(ForeachStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public FunctionInvokeStatementContext functionInvokeStatement() {
			return getRuleContext(FunctionInvokeStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(136);
				createPolicyStatement();
				}
				break;
			case 2:
				{
				setState(137);
				createNonPCStatement();
				}
				break;
			case 3:
				{
				setState(138);
				createObligationStatement();
				}
				break;
			case 4:
				{
				setState(139);
				createProhibitionStatement();
				}
				break;
			case 5:
				{
				setState(140);
				setNodePropertiesStatement();
				}
				break;
			case 6:
				{
				setState(141);
				assignStatement();
				}
				break;
			case 7:
				{
				setState(142);
				deassignStatement();
				}
				break;
			case 8:
				{
				setState(143);
				associateStatement();
				}
				break;
			case 9:
				{
				setState(144);
				dissociateStatement();
				}
				break;
			case 10:
				{
				setState(145);
				setResourceAccessRightsStatement();
				}
				break;
			case 11:
				{
				setState(146);
				deleteStatement();
				}
				break;
			case 12:
				{
				setState(147);
				deleteRuleStatement();
				}
				break;
			case 13:
				{
				setState(148);
				variableAssignmentStatement();
				}
				break;
			case 14:
				{
				setState(149);
				variableDeclarationStatement();
				}
				break;
			case 15:
				{
				setState(150);
				functionDefinitionStatement();
				}
				break;
			case 16:
				{
				setState(151);
				returnStatement();
				}
				break;
			case 17:
				{
				setState(152);
				foreachStatement();
				}
				break;
			case 18:
				{
				setState(153);
				breakStatement();
				}
				break;
			case 19:
				{
				setState(154);
				continueStatement();
				}
				break;
			case 20:
				{
				setState(155);
				functionInvokeStatement();
				}
				break;
			case 21:
				{
				setState(156);
				ifStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementBlockContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY() { return getToken(PMLParser.OPEN_CURLY, 0); }
		public TerminalNode CLOSE_CURLY() { return getToken(PMLParser.CLOSE_CURLY, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterStatementBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitStatementBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitStatementBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementBlockContext statementBlock() throws RecognitionException {
		StatementBlockContext _localctx = new StatementBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statementBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(OPEN_CURLY);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << DELETE) | (1L << SET_RESOURCE_ACCESS_RIGHTS) | (1L << ASSIGN) | (1L << DEASSIGN) | (1L << SET_PROPERTIES) | (1L << ASSOCIATE) | (1L << DISSOCIATE) | (1L << BREAK) | (1L << FUNCTION) | (1L << CONST) | (1L << IF) | (1L << CONTINUE) | (1L << FOREACH) | (1L << RETURN) | (1L << VAR))) != 0) || _la==ID) {
				{
				{
				setState(160);
				statement();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			match(CLOSE_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreatePolicyStatementContext extends ParserRuleContext {
		public ExpressionContext name;
		public ExpressionContext properties;
		public TerminalNode CREATE() { return getToken(PMLParser.CREATE, 0); }
		public TerminalNode POLICY_CLASS() { return getToken(PMLParser.POLICY_CLASS, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode WITH_PROPERTIES() { return getToken(PMLParser.WITH_PROPERTIES, 0); }
		public HierarchyContext hierarchy() {
			return getRuleContext(HierarchyContext.class,0);
		}
		public CreatePolicyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createPolicyStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterCreatePolicyStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitCreatePolicyStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitCreatePolicyStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreatePolicyStatementContext createPolicyStatement() throws RecognitionException {
		CreatePolicyStatementContext _localctx = new CreatePolicyStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createPolicyStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(CREATE);
			setState(169);
			match(POLICY_CLASS);
			setState(170);
			((CreatePolicyStatementContext)_localctx).name = expression(0);
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH_PROPERTIES) {
				{
				setState(171);
				match(WITH_PROPERTIES);
				setState(172);
				((CreatePolicyStatementContext)_localctx).properties = expression(0);
				}
			}

			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_CURLY) {
				{
				setState(175);
				hierarchy();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HierarchyContext extends ParserRuleContext {
		public TerminalNode OPEN_CURLY() { return getToken(PMLParser.OPEN_CURLY, 0); }
		public TerminalNode CLOSE_CURLY() { return getToken(PMLParser.CLOSE_CURLY, 0); }
		public UserAttrsHierarchyContext userAttrsHierarchy() {
			return getRuleContext(UserAttrsHierarchyContext.class,0);
		}
		public ObjectAttrsHierarchyContext objectAttrsHierarchy() {
			return getRuleContext(ObjectAttrsHierarchyContext.class,0);
		}
		public AssociationsHierarchyContext associationsHierarchy() {
			return getRuleContext(AssociationsHierarchyContext.class,0);
		}
		public HierarchyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hierarchy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterHierarchy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitHierarchy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitHierarchy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HierarchyContext hierarchy() throws RecognitionException {
		HierarchyContext _localctx = new HierarchyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_hierarchy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(OPEN_CURLY);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==USER_ATTRIBUTES) {
				{
				setState(179);
				userAttrsHierarchy();
				}
			}

			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OBJECT_ATTRIBUTES) {
				{
				setState(182);
				objectAttrsHierarchy();
				}
			}

			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSOCIATIONS) {
				{
				setState(185);
				associationsHierarchy();
				}
			}

			setState(188);
			match(CLOSE_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UserAttrsHierarchyContext extends ParserRuleContext {
		public TerminalNode USER_ATTRIBUTES() { return getToken(PMLParser.USER_ATTRIBUTES, 0); }
		public HierarchyBlockContext hierarchyBlock() {
			return getRuleContext(HierarchyBlockContext.class,0);
		}
		public UserAttrsHierarchyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_userAttrsHierarchy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).enterUserAttrsHierarchy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PMLParserListener ) ((PMLParserListener)listener).exitUserAttrsHierarchy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PMLParserVisitor ) return ((PMLParserVisitor<? extends T>)visitor).visitUserAttrsHierarchy(this);
			else return visitor.visitChildren(this);
		}
	}
